--- a/META.yml
+++ b/META.yml
@@ -1,11 +1,10 @@
 --- #YAML:1.0
 name: Big5HKSCS
-abstract: Source code filter for Big5-HKSCS script
-version: 0.82
+abstract: Source code filter for Big5-HKSCS script (Imitation JPerl)
+version: 0.83
 author:
   - INABA Hitoshi <ina@cpan.org>
 license: perl
-distribution_type: script
 requires:
   ExtUtils::MakeMaker: 5.4302
   Archive::Tar: 0.072
