Import of INA/Char-Big5HKSCS-0.97 from CPAN.
gitpan-cpan-distribution: Char-Big5HKSCS
gitpan-cpan-version:      0.97
gitpan-cpan-path:         INA/Char/Big5HKSCS/Char-Big5HKSCS-0.97.tar.gz
gitpan-cpan-author:       INA
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,7 +1,7 @@
 --- #YAML:1.0
-name: Big5HKSCS
+name: Char::Big5HKSCS
 abstract: Source code filter for Big5-HKSCS script (Imitation JPerl)
-version: 0.96
+version: 0.97
 author:
   - INABA Hitoshi <ina@cpan.org>
 license: perl
